--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
-  "version": 2,
   "builds": [
-    {
-      "src": "main.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb" }
-    }
+    { "src": "api/index.py", "use": "@vercel/python" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "main.py"
-    }
+    { "src": "/(.*)", "dest": "api/index.py" }
   ]
 }
